language/move-prover/tests/sources/functional/loops.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/loops.move:86:5 ───
    │
 86 │ ╭     spec fun iter10_abort_incorrect { // Disproved. Abort always happens.
 87 │ │         pragma verify=true;
 88 │ │         aborts_if false;
 89 │ │     }
    │ ╰─────^
    ·
 82 │             if (i == 7) abort 7;
    │                         ------- abort happened here with code 0x7
    │
    =     at tests/sources/functional/loops.move:77: iter10_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:79: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:80: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:78: iter10_abort_incorrect
    =     at tests/sources/functional/loops.move:82: iter10_abort_incorrect
    =         ABORTED

error: function does not abort under this condition

    ┌── tests/sources/functional/loops.move:58:9 ───
    │
 58 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/loops.move:48: iter10_no_abort_incorrect
    =         i = <redacted>
    =     at tests/sources/functional/loops.move:50: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:51: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:49: iter10_no_abort_incorrect
    =     at tests/sources/functional/loops.move:58

error: unknown assertion failed

     ┌── tests/sources/functional/loops.move:200:10 ───
     │
 200 │         };
     │          ^
     │
     =     at tests/sources/functional/loops.move:183: loop_with_two_back_edges_incorrect
     =         x = <redacted>
     =         y = <redacted>
     =     at tests/sources/functional/loops.move:185: loop_with_two_back_edges_incorrect
     =     at tests/sources/functional/loops.move:188: loop_with_two_back_edges_incorrect
     =     at tests/sources/functional/loops.move:189: loop_with_two_back_edges_incorrect
     =     at tests/sources/functional/loops.move:191: loop_with_two_back_edges_incorrect
     =         x = <redacted>
     =     at tests/sources/functional/loops.move:197: loop_with_two_back_edges_incorrect

error: unknown assertion failed

     ┌── tests/sources/functional/loops.move:144:17 ───
     │
 144 │ ╭                 spec {
 145 │ │                     assert x != y;
 146 │ │                 };
     │ ╰─────────────────^
     │
     =     at tests/sources/functional/loops.move:138: nested_loop_inner_invariant_incorrect
     =         x = <redacted>
     =         y = <redacted>
     =     at tests/sources/functional/loops.move:140: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:143: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:144: nested_loop_inner_invariant_incorrect

error: unknown assertion failed

     ┌── tests/sources/functional/loops.move:157:10 ───
     │
 157 │         };
     │          ^
     │
     =     at tests/sources/functional/loops.move:138: nested_loop_inner_invariant_incorrect
     =         x = <redacted>
     =         y = <redacted>
     =     at tests/sources/functional/loops.move:140: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:143: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:144: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:145: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:147: nested_loop_inner_invariant_incorrect
     =     at tests/sources/functional/loops.move:150: nested_loop_inner_invariant_incorrect
     =         y = <redacted>

error: unknown assertion failed

     ┌── tests/sources/functional/loops.move:132:10 ───
     │
 132 │         };
     │          ^
     │
     =     at tests/sources/functional/loops.move:113: nested_loop_outer_invariant_incorrect
     =         x = <redacted>
     =         y = <redacted>
     =     at tests/sources/functional/loops.move:115: nested_loop_outer_invariant_incorrect
     =     at tests/sources/functional/loops.move:118: nested_loop_outer_invariant_incorrect
     =     at tests/sources/functional/loops.move:119: nested_loop_outer_invariant_incorrect
     =     at tests/sources/functional/loops.move:122: nested_loop_outer_invariant_incorrect
     =         x = <redacted>
